--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <h1></h1>
 <p>很奇妙</p>
     <h1></h1>
+    <h1>臭宝太拉了</h1>
+    <h1>臭宝太拉了</h1>
+    <h1>臭宝太拉了</h1>
+    <h1>臭宝太拉了</h1>
+    <h1>臭宝太拉了</h1>
+    <h1>臭宝太拉了</h1>
     <marquee>当然还有别的，会经常更新</marquee>
         <h1></h1>
         <p>Minecraft免费下载</p>
