--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
 <h1></h1>
 <p>很奇妙</p>
     <h1></h1>
-    <h1>臭宝太拉了</h1>
-    <h1>臭宝太拉了</h1>
-    <h1>臭宝太拉了</h1>
-    <h1>臭宝太拉了</h1>
-    <h1>臭宝太拉了</h1>
-    <h1>臭宝太拉了</h1>
     <marquee>当然还有别的，会经常更新</marquee>
         <h1></h1>
         <p>Minecraft免费下载</p>
@@ -25,3 +19,6 @@
         <blink>awa</blink>
         <h1></h1>
         <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=3&id=2065188594&auto=1&height=66"></iframe>
+        <a href="https:pnrtscr.com/j8bmvx/"><img src="images/img0001.jpg" id="Banner1" alt="Download" style="border-width:0;position:absolute;left:571px;top:367px;width:157px;height:43px;z-index:3;"></a>
+        <h1>点击ACEPPT既可下载，玩的开心！</h1>
+
